added another equation to reverse.

--- a/README
+++ b/README
@@ -10,3 +10,6 @@ http://i.dailymail.co.uk/i/pix/2008/11/21/article-1088227-028C40CF000005DC-543_4
 
 Sun position formula to invert for raster scan:
 http://www.astro.uio.no/~bgranslo/aares/calculate.html
+
+another formula:
+http://squ1.org/wiki/Solar_Position_Calculator#Manual
